added link to github
added link to github

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE <html>
 <html lang="en">
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59142155-6"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59142155-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-		gtag('config', 'UA-59142155-6');
-	</script>
+  gtag('config', 'UA-59142155-6');
+</script>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,6 +25,7 @@
 
 <body>
 	<div id="gypsyW">
+	<div id="code"> <a href="https://github.com/xanderv80/Lasciel" target="_blank"> click for code </a> </div>
 		<div class="tarot" id="tarot">
 
 			<div class="answer"><img class="answerImg" id="pYes" onclick="pSelectY()" src="images/yes.png" alt="yes"></div>
@@ -51,8 +52,9 @@
 		</div>	
 
 		<div class="dialog" id="dialog">
-			<p> Welcome to<br>Xander's Tarot Card Game<br>Please choose a Zodiac </p>	
+			<p> Welcome to<br>Xander's Tarot Card Game<br>Please choose a Zodiac</p>						
 		</div>
+		
 	</div>
 
 
